--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,10 @@ services:
         SENTRY_SOURCE_MAPS_ORGANIZATION: ${SENTRY_SOURCE_MAPS_ORGANIZATION}
         SENTRY_SOURCE_MAPS_PROJECT: ${SENTRY_SOURCE_MAPS_PROJECT}
         COMMIT_HASH: ${GITHUB_SHA}
+        PROPRIETARY_MODE: ${PROPRIETARY_MODE}
+        STRIPE_PUBLIC_API_KEY: ${STRIPE_PUBLIC_API_KEY}
+        TEXTERIFY_PAYMENT_SERVER: ${TEXTERIFY_PAYMENT_SERVER}
+        SENTRY_DSN_FRONTEND: ${SENTRY_DSN_FRONTEND}
       dockerfile: Dockerfile
     depends_on:
       - db
