--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -39,9 +39,7 @@ jobs:
                   password: ${{ secrets.DOCKERHUB_TOKEN }}
 
             - name: Build the Docker image
-              run: docker build . \
-                --file Dockerfile \
-                --tag chrztoph/texterify:$GITHUB_SHA
+              run: docker build . --file Dockerfile --tag chrztoph/texterify:$GITHUB_SHA
             - name: Tag image also as latest
               run: docker tag chrztoph/texterify:$GITHUB_SHA chrztoph/texterify:latest
             - name: Push images
@@ -50,8 +48,7 @@ jobs:
                   docker push chrztoph/texterify:latest
 
             - name: Build the Docker image for the cloud version
-              run: docker build . \
-                --file Dockerfile \
+              run: docker build . --file Dockerfile \
                 --build-arg PROPRIETARY_MODE=${{ secrets.PROPRIETARY_MODE }} \
                 --build-arg STRIPE_PUBLIC_API_KEY=${{ secrets.STRIPE_PUBLIC_API_KEY }} \
                 --build-arg TEXTERIFY_PAYMENT_SERVER=${{ secrets.TEXTERIFY_PAYMENT_SERVER }} \
