--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -49,3 +49,7 @@ RUN apt-get install apt-transport-https
 RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
 RUN echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
 RUN apt-get update && apt-get install yarn -y
+
+# Keep bash history between runs.
+RUN SNIPPET="export PROMPT_COMMAND='history -a' && export HISTFILE=/command-history/.bash_history" \
+    && echo $SNIPPET >> "/root/.bashrc"
