--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,9 +1,10 @@
+---
 #-------------------------------------------------------------------------------------------------------------
 # Copyright (c) Microsoft Corporation. All rights reserved.
 # Licensed under the MIT License. See https://go.microsoft.com/fwlink/?linkid=2090316 for license information.
 #-------------------------------------------------------------------------------------------------------------
 
-version: '3'
+version: "3"
 
 networks:
   default:
@@ -71,4 +72,4 @@ services:
     command: /bin/sh -c "while sleep 1000; do :; done"
 
 volumes:
-    texterify-app-bash-history:
+  texterify-app-bash-history:
