--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,12 @@
   "htmlWhitespaceSensitivity": "ignore",
   "trailingComma": "none",
   "printWidth": 120,
-  "useTabs": false
+  "overrides": [
+    {
+      "files": ["**/*.json", "**/*.yaml", "**/*.yml", ".prettierrc", ".eslintrc"],
+      "options": {
+        "tabWidth": 2
+      }
+    }
+  ]
 }
