--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Check database consistency
         run: docker-compose exec -T app yarn check:database-consistency:test
       - name: Upload to codecov
-        run: ci_env=`bash <(curl -s https://codecov.io/env)` docker-compose run $ci_env app
+        run: ci_env=`bash <(curl -s https://codecov.io/env)` docker-compose exec app $ci_env
 
   build-and-push:
     runs-on: ubuntu-18.04
