--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Check database consistency
         run: docker-compose exec -T app yarn check:database-consistency:test
       - name: Upload to codecov
-        run: docker-compose exec app bash -c "bash <(curl -s https://codecov.io/env)"
+        run: docker-compose exec -T app bash -c "bash <(curl -s https://codecov.io/env)"
 
   build-and-push:
     runs-on: ubuntu-18.04
