--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -22,13 +22,14 @@ jobs:
       - name: Run linters
         run: docker-compose exec -T app yarn lint
       - name: Run tests
-        run: docker-compose exec -T app yarn test
-      - name: Check database consistency
-        run: docker-compose exec -T app yarn check:database-consistency:test
-      - name: Upload to codecov
         run: |
           ci_env=`bash <(curl -s https://codecov.io/env)`
-          docker-compose exec -T $ci_env app bash -c "bash <(curl -s https://codecov.io/bash)"
+          docker-compose exec -T $ci_env app yarn test
+      - name: Check database consistency
+        run: docker-compose exec -T app yarn check:database-consistency:test
+      # - name: Upload to codecov
+      #   run: |
+      #     docker-compose exec -T $ci_env app bash -c "bash <(curl -s https://codecov.io/bash)"
 
   build-and-push:
     runs-on: ubuntu-18.04
