--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,7 +5,7 @@ EXPOSE 3000
 EXPOSE 3011
 
 ENV RAILS_ENV="development"
-ENV RAILS_ROOT /var/www/texterify
+ENV RAILS_ROOT /workspace
 
 # Install essential libraries.
 RUN apt-get update && apt-get install -y build-essential libpq-dev
