--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Check database consistency
         run: docker-compose exec -T app yarn check:database-consistency:test
       - name: Upload to codecov
-        run: bash <(curl -s https://codecov.io/bash) -X gcov -X coveragepy -X search -X xcode -X network -X gcovout -f coverage/coverage.json
+        run: bash <(curl -s https://codecov.io/bash) -X gcov -X coveragepy -X search -X xcode -X gcovout -f coverage/coverage.json
 
   build-and-push:
     runs-on: ubuntu-18.04
