--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Cat coverage file content
         run: cat coverage/coverage.json
       - name: Upload to codecov
-        run: bash <(curl -s https://codecov.io/bash) -X gcov -X coveragepy -X search -X xcode -X gcovout -f coverage/coverage.json
+        run: bash <(curl -s https://codecov.io/bash) -X gcov -X coveragepy -X search -X xcode -X gcovout -f coverage/coverage.json -d
 
   build-and-push:
     runs-on: ubuntu-18.04
