Fix bug when performing search on last page of keys and languages site, add tests

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -79,10 +79,13 @@ Style/StructInheritance:
   Enabled: false
 
 Style/BlockComments:
-    Enabled: false
+  Enabled: false
 
 Style/CommentAnnotation:
-    Enabled: false
+  Enabled: false
+
+Style/WordArray:
+  Enabled: false
 
 Layout/MultilineMethodCallIndentation:
   EnforcedStyle: "indented"
