Fix linter issues

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -114,6 +114,9 @@ Metrics/CyclomaticComplexity:
 Metrics/PerceivedComplexity:
   Enabled: false
 
+Metrics/ModuleLength:
+  Enabled: false
+
 Lint/RaiseException:
   Enabled: true
 
