Refactor current license handling, add check for max users of a license

--- a/.env.development.template
+++ b/.env.development.template
@@ -4,6 +4,8 @@ PAYMENT_SERVICE_HOST=
 MAILER_HOST=
 PROPRIETARY_MODE=false
 
+DEV_ENABLE_LICENSE_USERS_LIMIT_CHECK=false
+
 SMTP_AUTHENTICATION=
 SMTP_ADDRESS=
 SMTP_PORT=
