--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "start:watcher:no-container-webpacker": "WEBPACKER_DEV_SERVER_PORT=3012 WEBPACKER_DEV_SERVER_PUBLIC=0.0.0.0:3012 ./bin/webpack-dev-server",
     "test": "yarn test:backend && yarn test:frontend",
     "test:backend": "RAILS_ENV=test bundle exec rspec",
-    "test:frontend": "yarn cypress:run",
+    "test:frontend": "yarn cypress install && yarn cypress:run",
     "dangerous:recreate-database": "bundle exec rails db:drop && bundle exec rails db:create && bundle exec rails db:migrate && bundle exec rails db:seed",
     "webpack-bundle-analyzer": "bin/webpack --profile --json > webpacker-stats.json && node_modules/.bin/webpack-bundle-analyzer webpacker-stats.json public/packs",
     "cypress:open": "yarn cypress open --project ./spec",
