Add cypress dependencies, add basic plan tests

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   },
   "devDependencies": {
     "cypress": "^6.2.1",
+    "cypress-file-upload": "^5.0.2",
     "husky": "^4.3.0",
     "less": "^3.10.3",
     "webpack-bundle-analyzer": "^4.3.0",
