--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install yarn packages with dev dependencies
         run: docker-compose exec -T app yarn install --production=false
       - name: Install cypress dependencies
-        run: docker-compose exec -T apt-get install libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
+        run: docker-compose exec -T app apt-get install libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
       - name: Run linters
         run: docker-compose exec -T app yarn lint
       - name: Run tests
