--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,4 +33,4 @@ services:
       - db
     volumes:
       - ./coverage:/var/www/texterify/coverage
-    entrypoint: ["bundle", "exec", "rails", "server", "-e", "test"]
+    entrypoint: "bundle exec rails server -e test"
