--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,8 @@ services:
         STRIPE_PUBLIC_API_KEY: ${STRIPE_PUBLIC_API_KEY}
         TEXTERIFY_PAYMENT_SERVER: ${TEXTERIFY_PAYMENT_SERVER}
         SENTRY_DSN_FRONTEND: ${SENTRY_DSN_FRONTEND}
-        RAILS_ENV: test
-        NODE_ENV: test
+        RAILS_ENV_ARG: test
+        NODE_ENV_ARG: test
       dockerfile: Dockerfile
     depends_on:
       - db
