--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Run linters
         run: docker-compose exec -T app yarn lint
       - name: Run tests
-        run: docker-compose exec -T app yarn test
+        run: docker-compose exec -T app yarn test:backend
       - name: Check database consistency
         run: docker-compose exec -T app yarn check:database-consistency:test
 
