--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -25,6 +25,8 @@ jobs:
       #   run: docker-compose exec -T app apt-get install -y libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
       - name: Run linters
         run: docker-compose exec -T app yarn lint
+      - name: Show memory
+        run: free -m
       - name: Run tests
         run: docker-compose exec -T app yarn test:backend
       - name: Check database consistency
