--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
         STRIPE_PUBLIC_API_KEY: ${STRIPE_PUBLIC_API_KEY}
         TEXTERIFY_PAYMENT_SERVER: ${TEXTERIFY_PAYMENT_SERVER}
         SENTRY_DSN_FRONTEND: ${SENTRY_DSN_FRONTEND}
-        RAILS_ENV_ARG: test
+        RAILS_ENV_ARG: production
         NODE_ENV_ARG: production
       dockerfile: Dockerfile
     entrypoint: ["./docker-compose-test-setup.sh"]
