--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -15,20 +15,20 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run docker-compose
         run: docker-compose up -d
-      # - name: Create and seed test database
-      #   run: docker-compose exec -T app bundle exec rails db:create db:migrate db:seed RAILS_ENV=test
-      # - name: Install test dependencies
-      #   run: docker-compose exec -T app bundle install --with test
-      # - name: Install yarn packages with dev dependencies
-      #   run: docker-compose exec -T app yarn install --production=false
-      # - name: Install cypress dependencies
-      #   run: docker-compose exec -T app apt-get install -y libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
+      - name: Create and seed test database
+        run: docker-compose exec -T app bundle exec rails db:create db:migrate db:seed RAILS_ENV=test
+      - name: Install test dependencies
+        run: docker-compose exec -T app bundle install --with test
+      - name: Install yarn packages with dev dependencies
+        run: docker-compose exec -T app yarn install --production=false
+      - name: Install cypress dependencies
+        run: docker-compose exec -T app apt-get install -y libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
       - name: Run linters
         run: docker-compose exec -T app yarn lint
-      - name: Show memory
-        run: free -m
+      # - name: Show memory
+      #   run: free -m
       - name: Run tests
-        run: docker-compose exec -T app yarn test
+        run: docker-compose exec -T app yarn test:backend
       - name: Check database consistency
         run: docker-compose exec -T app yarn check:database-consistency:test
 
