Try to fix error

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
         RAILS_ENV_ARG: production
         NODE_ENV_ARG: production
       dockerfile: Dockerfile
-    # entrypoint: ["./docker-compose-test-setup.sh"]
+    entrypoint: ["./docker-compose-test-setup.sh"]
     depends_on:
       - db
     volumes:
