--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,10 +28,10 @@ services:
         STRIPE_PUBLIC_API_KEY: ${STRIPE_PUBLIC_API_KEY}
         TEXTERIFY_PAYMENT_SERVER: ${TEXTERIFY_PAYMENT_SERVER}
         SENTRY_DSN_FRONTEND: ${SENTRY_DSN_FRONTEND}
-        RAILS_ENV_ARG: production
+        RAILS_ENV_ARG: test
         NODE_ENV_ARG: production
       dockerfile: Dockerfile
-    entrypoint: ["./docker-compose-test-setup.sh"]
+    # entrypoint: ["docker-compose-test-setup.sh"]
     depends_on:
       - db
     volumes:
