Add test Dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,8 +30,8 @@ services:
         SENTRY_DSN_FRONTEND: ${SENTRY_DSN_FRONTEND}
         RAILS_ENV_ARG: test
         NODE_ENV_ARG: production
-      dockerfile: Dockerfile
-    entrypoint: ["./docker-compose-test-setup.sh"]
+      dockerfile: Dockerfile.test
+    # entrypoint: ["./docker-compose-test-setup.sh"]
     depends_on:
       - db
     volumes:
