--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -15,8 +15,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run docker-compose
         run: docker-compose up -d
-      # - name: Create and seed test database
-      #   run: docker-compose exec -T app bundle exec rails db:create db:migrate db:seed RAILS_ENV=test
+      - name: Create and seed test database
+        run: docker-compose exec -T app bundle exec rails db:create db:migrate db:seed RAILS_ENV=test
       # - name: Install test dependencies
       #   run: docker-compose exec -T app bundle install --with test
       # - name: Install yarn packages with dev dependencies
