--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,14 +20,8 @@ services:
     build:
       context: .
       args:
-        SENTRY_SOURCE_MAPS_AUTH_TOKEN: ${SENTRY_SOURCE_MAPS_AUTH_TOKEN}
-        SENTRY_SOURCE_MAPS_ORGANIZATION: ${SENTRY_SOURCE_MAPS_ORGANIZATION}
-        SENTRY_SOURCE_MAPS_PROJECT: ${SENTRY_SOURCE_MAPS_PROJECT}
         COMMIT_HASH: ${GITHUB_SHA}
-        PROPRIETARY_MODE: ${PROPRIETARY_MODE}
-        STRIPE_PUBLIC_API_KEY: ${STRIPE_PUBLIC_API_KEY}
-        TEXTERIFY_PAYMENT_SERVER: ${TEXTERIFY_PAYMENT_SERVER}
-        SENTRY_DSN_FRONTEND: ${SENTRY_DSN_FRONTEND}
+        PROPRIETARY_MODE: true
         RAILS_ENV_ARG: test
         NODE_ENV_ARG: production
       dockerfile: Dockerfile.test
