--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       context: .
       args:
         COMMIT_HASH: ${GITHUB_SHA}
-        PROPRIETARY_MODE: true
+        PROPRIETARY_MODE: "true"
         RAILS_ENV_ARG: test
         NODE_ENV_ARG: production
       dockerfile: Dockerfile.test
