Add mailcatcher setup

--- a/.env.development.template
+++ b/.env.development.template
@@ -7,9 +7,9 @@ PROPRIETARY_MODE=false
 DEV_ENABLE_LICENSE_USERS_LIMIT_CHECK=false
 
 SMTP_AUTHENTICATION=
-SMTP_ADDRESS=
-SMTP_PORT=
-SMTP_DOMAIN=
+SMTP_ADDRESS=127.0.0.1
+SMTP_PORT=1025
+SMTP_DOMAIN=127.0.0.1
 SMTP_USERNAME=
 SMTP_PASSWORD=
 SMTP_ENABLE_STARTTLS_AUTO=
