--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "start:no-container-webpacker": "WEBPACKER_DEV_SERVER_PORT=3012 WEBPACKER_DEV_SERVER_PUBLIC=host.docker.internal:3012 WEBPACKER_DEV_SERVER_HOST=host.docker.internal yarn start",
     "start:watcher": "./bin/webpack-dev-server",
     "start:watcher:no-container-webpacker": "WEBPACKER_DEV_SERVER_PORT=3012 WEBPACKER_DEV_SERVER_PUBLIC=0.0.0.0:3012 ./bin/webpack-dev-server",
+    "start:mailcatcher": "mailcatcher --http-ip 0.0.0.0",
     "test": "yarn test:backend && yarn test:frontend",
     "test:backend": "RAILS_ENV=test bundle exec rspec",
     "test:frontend": "yarn cypress install && yarn cypress:run",
