--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -52,12 +52,8 @@ services:
 
     image: chrztoph/texterify:local
 
-    environment:
-      - SECRET_KEY_BASE=abd834a091ca2069a660b50dd50cffa0b9d5f6bd51395da186f07785c14f14bb52109b4d8bb3344cb8eb31ada9dd2a10a3422ef73317c0923ee32a732557faac
-      - DB_DEV_HOST=db
-      - DB_DEV_USERNAME=postgres
-      - DB_TEST_HOST=db
-      - DB_TEST_USERNAME=postgres
+    env_file:
+      - .devcontainer/.env
 
     ports:
       - "3000:3000"
@@ -66,6 +62,23 @@ services:
 
     # Overrides default command so things don't shut down after the process ends.
     command: /bin/sh -c "while sleep 1000; do :; done"
+
+  sidekiq:
+    build:
+      context: .
+      dockerfile: .devcontainer/Dockerfile
+    volumes:
+      # Update this to wherever you want VS Code to mount the folder of your project
+      - .:/workspace:delegated
+    env_file:
+      - .devcontainer/.env
+    depends_on:
+      - db
+      - redis
+    command: bundle exec sidekiq
+
+  redis:
+    image: redis:6.2.0-alpine
 
 volumes:
   texterify-app-bash-history:
