Disable post create command because it is failing sometimes

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -34,7 +34,7 @@
 		"rebornix.ruby"
 	],
 
-	"postCreateCommand": "bundle exec rails db:create db:migrate db:seed"
+	// "postCreateCommand": "bundle exec rails db:create db:migrate db:seed"
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
