Switch to polling for webpacker

--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -76,6 +76,7 @@ development:
       'Access-Control-Allow-Origin': '*'
     watch_options:
       ignored: '**/node_modules/**'
+      poll: true
 
 
 test:
