--- a/.database_consistency.yml
+++ b/.database_consistency.yml
@@ -19,6 +19,8 @@ ActiveStorage::Blob:
   enabled: false
 ActiveStorage::Attachment:
   enabled: false
+ActiveStorage::VariantRecord:
+  enabled: false
 
 RailsSettings::Base:
   enabled: false
