--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
     build:
       context: .
       args:
+        SENTRY_SOURCE_MAPS_ORGANIZATION: texterify
         COMMIT_HASH: ${GITHUB_SHA}
         PROPRIETARY_MODE: "true"
         RAILS_ENV_ARG: test
