Add deepl api support

--- a/.env.development.template
+++ b/.env.development.template
@@ -29,3 +29,5 @@ SENTRY_SOURCE_MAPS_AUTH_TOKEN=
 SENTRY_SOURCE_MAPS_ORGANIZATION=
 SENTRY_SOURCE_MAPS_PROJECT=
 SENTRY_DSN_BACKEND=
+
+DEEPL_API_TOKEN=
