Add machine translation site and auto translation support

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -23,6 +23,9 @@ Rails/IndexBy:
 Rails/FilePath:
   EnforcedStyle: arguments
 
+Rails/FindEach:
+  Enabled: false
+
 Style/Documentation:
   Enabled: false
 
@@ -93,6 +96,9 @@ Style/NumericLiterals:
 Style/RedundantSelf:
   Enabled: false
 
+Style/RescueStandardError:
+  Enabled: false
+
 Layout/MultilineMethodCallIndentation:
   EnforcedStyle: "indented"
 
@@ -121,6 +127,9 @@ Metrics/PerceivedComplexity:
   Enabled: false
 
 Metrics/ModuleLength:
+  Enabled: false
+
+Metrics/BlockNesting:
   Enabled: false
 
 Lint/RaiseException:
