--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,7 +21,10 @@
 
 	// Set *default* container specific settings.json values on container create.
 	"settings": {
-		"terminal.integrated.shell.linux": null
+		"terminal.integrated.shell.linux": null,
+		"[ruby]": {
+			"editor.tabSize": 2
+		}
 	},
 
 	// Add the IDs of extensions you want installed when the container is created.
