Fix popover design

--- a/.prettierrc
+++ b/.prettierrc
@@ -7,7 +7,7 @@
   "printWidth": 120,
   "overrides": [
     {
-      "files": ["**/*.json", "**/*.yaml", "**/*.yml", ".prettierrc", ".eslintrc"],
+      "files": ["**/*.json", "**/*.yaml", "**/*.yml", ".prettierrc", ".eslintrc", "**/*.less"],
       "options": {
         "tabWidth": 2
       }
