--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "lint:backend": "bundle exec rubocop",
     "format": "yarn format:frontend && yarn format:backend",
     "format:frontend": "prettier --write 'app/**/*.{js,ts,tsx}'",
-    "format:backend": "prettier --write 'app/**/*.{rb}'",
+    "format:backend": "prettier --write 'app/**/*.rb'",
     "start": "yarn start:mailcatcher 2> /dev/null; rm /workspace/tmp/pids/server.pid 2> /dev/null; bundle exec rails server -p 3000 -b \"0.0.0.0\"",
     "start:no-container-webpacker": "WEBPACKER_DEV_SERVER_PORT=3012 WEBPACKER_DEV_SERVER_PUBLIC=host.docker.internal:3012 WEBPACKER_DEV_SERVER_HOST=host.docker.internal yarn start",
     "start:watcher": "./bin/webpack-dev-server",
