--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
   },
   "devDependencies": {
     "@prettier/plugin-ruby": "^1.5.5",
-    "cypress": "^6.5.0",
+    "cypress": "7.4.0",
     "cypress-file-upload": "^5.0.2",
     "husky": "^4.3.8",
     "less": "^4.1.1",
