--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,9 @@
     "[typescriptreact]": {
         "editor.formatOnSave": true
     },
+    "[less]": {
+        "editor.formatOnSave": true
+    },
     "[ruby]": {
         "editor.formatOnSave": true,
         "editor.defaultFormatter": "esbenp.prettier-vscode",
