--- a/.env.development.template
+++ b/.env.development.template
@@ -1,10 +1,7 @@
-EMAIL_CONFIRMATION_REQUIRED=false
 APP_HOST=
-PAYMENT_SERVICE_HOST=
 MAILER_HOST=
-PROPRIETARY_MODE=false
-
-DEV_ENABLE_LICENSE_USERS_LIMIT_CHECK=false
+ASSET_HOST=
+EMAIL_CONFIRMATION_REQUIRED=false
 
 SMTP_AUTHENTICATION=
 SMTP_ADDRESS=127.0.0.1
@@ -14,6 +11,7 @@ SMTP_USERNAME=
 SMTP_PASSWORD=
 SMTP_ENABLE_STARTTLS_AUTO=
 SMTP_OPENSSL_VERIFY_MODE=
+SMTP_TLS=
 
 MAIL_RAISE_DELIVERY_ERRORS_DEV=
 MAIL_PERFORM_DELIVERIES_DEV=
