--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -30,6 +30,8 @@ jobs:
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
     steps:
       - uses: actions/checkout@v2
+      - name: Set RELEASE_VERSION env
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
@@ -43,6 +45,8 @@ jobs:
 
       - name: Tag image also as latest
         run: docker tag chrztoph/texterify:$GITHUB_SHA chrztoph/texterify:latest
+      - name: Tag image if tag is given
+        run: docker tag chrztoph/texterify:$GITHUB_SHA chrztoph/texterify:${{ $RELEASE_VERSION }}
       - name: Push images
         run: |
           docker push chrztoph/texterify:$GITHUB_SHA
