--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -3,6 +3,12 @@ name: Build & Push
 on:
   push:
     branches: [master]
+    tags:
+      - v1.*
+      - v2.*
+      - v3.*
+      - v4.*
+      - v5.*
 
 jobs:
   test:
