--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -21,12 +21,16 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run docker-compose
         run: docker-compose up -d
+
       - name: Create and seed test database
         run: docker-compose exec -T app bundle exec rails db:create db:migrate db:seed RAILS_ENV=test
+
       - name: Run linters
         run: docker-compose exec -T app yarn lint
+
       - name: Run tests
         run: docker-compose exec -T app yarn test
+
       - name: Check database consistency
         run: docker-compose exec -T app yarn check:database-consistency:test
 
@@ -38,6 +42,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Set RELEASE_VERSION env
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
@@ -46,19 +51,30 @@ jobs:
 
       - name: Build the Docker image
         run: docker build . --file Dockerfile --target production --build-arg COMMIT_HASH=$GITHUB_SHA --tag chrztoph/texterify:$GITHUB_SHA
+
       - name: Build the Docker image for the cloud version
         run: docker build . --file Dockerfile --target production --build-arg COMMIT_HASH=$GITHUB_SHA --build-arg PROPRIETARY_MODE=${{ secrets.PROPRIETARY_MODE }} --build-arg STRIPE_PUBLIC_API_KEY=${{ secrets.STRIPE_PUBLIC_API_KEY }} --build-arg TEXTERIFY_PAYMENT_SERVER=${{ secrets.TEXTERIFY_PAYMENT_SERVER }} --build-arg SENTRY_DSN_FRONTEND=${{ secrets.SENTRY_DSN_FRONTEND }} --tag chrztoph/texterify-cloud:$GITHUB_SHA
 
       - name: Tag image also as latest
         run: docker tag chrztoph/texterify:$GITHUB_SHA chrztoph/texterify:latest
-      - name: Tag image if tag is given
-        run: docker tag chrztoph/texterify:$GITHUB_SHA chrztoph/texterify:${{ env.RELEASE_VERSION }}
+
       - name: Push images
         run: |
           docker push chrztoph/texterify:$GITHUB_SHA
           docker push chrztoph/texterify:latest
+
+      - name: Tag image if tag is set
+        if: env.RELEASE_VERSION
+        run: docker tag chrztoph/texterify:$GITHUB_SHA chrztoph/texterify:${{ env.RELEASE_VERSION }}
+
+      - name: Push images if tag is set
+        if: env.RELEASE_VERSION
+        run: |
+          docker push chrztoph/texterify:${{ env.RELEASE_VERSION }}
+
       - name: Tag cloud image also as latest
         run: docker tag chrztoph/texterify-cloud:$GITHUB_SHA chrztoph/texterify-cloud:latest
+
       - name: Push images
         run: |
           docker push chrztoph/texterify-cloud:$GITHUB_SHA
