--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
     "@prettier/plugin-ruby": "^1.5.5",
     "cypress": "7.4.0",
     "cypress-file-upload": "^5.0.2",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-mocha": "^9.0.0",
     "husky": "^4.3.8",
     "less": "^4.1.1",
     "webpack-bundle-analyzer": "^4.4.0",
@@ -84,7 +86,7 @@
     "check:database-consistency:test": "RAILS_ENV=test ./bin/database_consistency",
     "check:licenses": "bundle exec license_finder",
     "lint": "yarn lint:frontend && yarn lint:backend",
-    "lint:frontend": "eslint 'app/javascript/**/*.{js,ts,tsx}'",
+    "lint:frontend": "eslint 'app/javascript/**/*.{js,ts,tsx}' 'spec/**/*.{js,ts,tsx}'",
     "lint:backend": "bundle exec rubocop",
     "format": "yarn format:frontend && yarn format:backend",
     "format:frontend": "prettier --write 'app/**/*.{js,ts,tsx}'",
