Add action cable and jobs channel

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@babel/preset-typescript": "^7.9.0",
     "@editorjs/editorjs": "^2.15.0",
     "@editorjs/list": "^1.4.0",
+    "@rails/actioncable": "^7.0.1",
     "@rails/webpacker": "^5.1.1",
     "@sentry/react": "^6.2.0",
     "@sentry/tracing": "^6.2.0",
