--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,10 +1,11 @@
 development:
-  adapter: async
+  adapter: redis
+  url: <%= ENV.fetch("REDIS_URL") { "redis://redis:6379/0" } %>
 
 test:
   adapter: test
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  url: <%= ENV.fetch("REDIS_URL") { "redis://redis:6379/0" } %>
   channel_prefix: texterify_production
