Add background job event handling

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sentry/webpack-plugin": "^1.14.1",
     "@stripe/stripe-js": "^1.9.0",
     "@types/lodash": "^4.14.168",
+    "@types/pubsub-js": "^1.8.3",
     "@types/query-string": "^6.1.0",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
@@ -49,6 +50,7 @@
     "postcss-cssnext": "^3.1.0",
     "prettier": "^2.3.0",
     "prop-types": "^15.6.1",
+    "pubsub-js": "^1.9.4",
     "query-string": "^6.14.1",
     "react": "^16.9.0",
     "react-avatar-editor": "^11.0.7",
