--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -12,8 +12,7 @@ on:
 
 jobs:
   test:
-    steps:
-      - uses: ./.github/workflows/test
+    uses: ./.github/workflows/test
 
   build-and-push:
     runs-on: ubuntu-18.04
