--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   test:
-    uses: ./.github/workflows/test
+    uses: ./.github/workflows/test.yml
 
   build-and-push:
     runs-on: ubuntu-18.04
