Refactor file import

--- a/spec/fixtures/yaml/devise_example.yml
+++ b/spec/fixtures/yaml/devise_example.yml
@@ -12,4 +12,4 @@ en:
   errors:
     messages:
       already_confirmed: "was already confirmed, please try signing in"
-      confirmation_period_expired: "needs to be confirmed within %{period}, please request a new one"
+      confirmation_period_expired: "needs to be confirmed within {period}, please request a new one"
