--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,7 +20,7 @@ Rails:
   Enabled: true
 
 Rails/IndexBy:
-    Enabled: false
+  Enabled: false
 
 Rails/FilePath:
   EnforcedStyle: arguments
@@ -79,6 +79,9 @@ Style/RedundantReturn:
 Style/CaseLikeIf:
   Enabled: false
 
+Style/QuotedSymbols:
+  Enabled: false
+
 # Disabled because of pundit headless policies
 Style/StructInheritance:
   Enabled: false
@@ -115,6 +118,19 @@ Layout/LineLength:
 
 Layout/SpaceAroundMethodCallOperator:
   Enabled: true
+
+Layout/RedundantLineBreak:
+  Enabled: true
+  InspectBlocks: false
+
+Lint/ShadowedException:
+  Enabled: false
+
+Lint/SymbolConversion:
+  Enabled: false
+
+Lint/DuplicateBranch:
+  Enabled: false
 
 Metrics/BlockLength:
   Enabled: false
@@ -169,4 +185,7 @@ RSpec/MultipleExpectations:
   Enabled: false
 
 RSpec/EmptyExampleGroup:
+  Enabled: false
+
+RSpec/FactoryBot/SyntaxMethods:
   Enabled: false
