--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "stylelint-config-standard": "^20.0.0",
     "ts-loader": "^7.0.1",
     "typescript": "^3.8.3",
+    "use-deep-compare-effect": "^1.8.1",
     "uuid": "^8.3.2",
     "webpack-cli": "^3.3.10"
   },
