--- a/package.json
+++ b/package.json
@@ -56,10 +56,12 @@
     "react-dropzone": "^10.1.8",
     "react-flag-icon-css": "^1.0.23",
     "react-hot-keys": "^2.6.2",
+    "react-markdown": "^8.0.3",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-spinkit": "^3.0.0",
     "react_ujs": "^2.6.0",
+    "remark-gfm": "^3.0.1",
     "sanitize-html": "^1.20.1",
     "styled-components": "^5.2.1",
     "stylelint-config-standard": "^20.0.0",
