Add import review logic

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -110,6 +110,9 @@ Style/WhileUntilModifier:
 Style/SymbolProc:
   Enabled: false
 
+Style/MultilineTernaryOperator:
+  Enabled: false
+
 Layout/MultilineMethodCallIndentation:
   EnforcedStyle: "indented"
 
