--- a/.github/workflows/reusable-test.yml
+++ b/.github/workflows/reusable-test.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Create and seed test database
         run: docker-compose exec -T app bundle exec rails db:create db:migrate db:seed RAILS_ENV=test
 
+      - name: Debug sleep
+        run: sleep(3000)
+
       - name: Run linters
         run: docker-compose exec -T app yarn lint
 
