--- a/.github/workflows/reusable-test.yml
+++ b/.github/workflows/reusable-test.yml
@@ -19,7 +19,7 @@ jobs:
         run: docker-compose exec -T app bundle exec rails db:create db:migrate db:seed RAILS_ENV=test
 
       - name: Debug sleep
-        run: sleep(3000)
+        run: sleep 3000
 
       - name: Run linters
         run: docker-compose exec -T app yarn lint
