--- a/.github/workflows/reusable-test.yml
+++ b/.github/workflows/reusable-test.yml
@@ -13,13 +13,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Run docker-compose
-        run: docker-compose up -d
+        run: docker-compose up -d && sleep 10
 
       - name: Create and seed test database
         run: docker-compose exec -T app bundle exec rails db:create db:migrate db:seed RAILS_ENV=test
-
-      - name: Debug sleep
-        run: sleep 3000
 
       - name: Run linters
         run: docker-compose exec -T app yarn lint
