--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@uppy/core": "^1.4.0",
     "@uppy/react": "^1.3.0",
     "antd": "^4.12.3",
+    "axios": "^1.2.2",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-preset-react": "^6.24.1",
     "core-js": "3",
@@ -57,6 +58,7 @@
     "react-flag-icon-css": "^1.0.23",
     "react-hot-keys": "^2.6.2",
     "react-markdown": "^8.0.3",
+    "react-query": "^3.39.2",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-spinkit": "^3.0.0",
