--- a/spec/cypress/tsconfig.json
+++ b/spec/cypress/tsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
       "target": "es5",
       "lib": ["es5", "dom"],
-      "types": ["cypress"]
+      "types": ["cypress"],
+      "resolveJsonModule": true
     },
     "include": ["**/*.ts"]
 }
