--- a/spec/cypress/tsconfig.json
+++ b/spec/cypress/tsconfig.json
@@ -1,7 +1,10 @@
 {
     "compilerOptions": {
       "target": "es5",
-      "lib": ["es5", "dom"],
+      "lib": [
+        "es6",
+        "dom"
+      ],
       "types": ["cypress"],
       "resolveJsonModule": true
     },
